--- a/templates/shutdown.html
+++ b/templates/shutdown.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shutdown</title>
+    <title>Spegni il Server</title>
 </head>
 <body>
-    
+    <h1>Conferma lo spegnimento</h1>
+    <form method="POST" action="/shutdown">
+        <button type="submit">Spegni il Server</button>
+    </form>
 </body>
 </html>
